// Copyright 2024 TII (SSRC) and the Ghaf contributors
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
option go_package = "./wifi";
package wifimanager;

message EmptyRequest {
}

message WifiNetworkRequest {
    string NetworkName = 1;
}

message WifiConnectionRequest {
    string SSID = 1;
    string Password = 2;
    string Settings = 3;
}

message AccessPoint {
    bool Connection = 1;
    string SSID = 2;
    uint32 Signal = 3;
    string Security = 4;
}

message WifiNetworkResponse {
    repeated AccessPoint networks = 1;
}

message WifiConnectionResponse {
    string Response = 1;
}

service WifiService {
    rpc ListNetwork(WifiNetworkRequest) returns (WifiNetworkResponse) {}
    rpc GetActiveConnection(EmptyRequest) returns (AccessPoint) {}
    rpc ConnectNetwork(WifiConnectionRequest) returns (WifiConnectionResponse) {}
    rpc DisconnectNetwork(EmptyRequest) returns (WifiConnectionResponse) {}
    rpc TurnOn(EmptyRequest) returns (WifiConnectionResponse) {}
    rpc TurnOff(EmptyRequest) returns (WifiConnectionResponse) {}
}
